feat(app): Added swarm_init & swarm_join roles

--- a/all.yml
+++ b/all.yml
@@ -1,6 +1,26 @@
 ---
+- name: Preconfig
+  hosts: all
+  roles:
+    - tags: preconfig
+      role: preconfig
+
 - name: Leader
   hosts: leader
   roles:
-    - role: preconfig
-      tags: preconfig
+    - role: swarm_init
+      tags: swarm_init
+
+- name: Managers
+  hosts: managers
+  roles:
+    - role: swarm_join
+      type: manager
+      tags: swarm_join
+
+- name: Workers
+  hosts: workers
+  roles:
+    - role: swarm_join
+      type: worker
+      tags: swarm_join
