feat(app): Init registry

--- a/all.yml
+++ b/all.yml
@@ -10,6 +10,10 @@
   roles:
     - role: swarm_init
       tags: swarm_init
+    - role: set_labels
+      tags: set_labels
+    - role: registry_init
+      tags: registry_init
 
 - name: Managers
   hosts: managers
@@ -17,6 +21,8 @@
     - role: swarm_join
       type: manager
       tags: swarm_join
+    - role: set_labels
+      tags: set_labels
 
 - name: Workers
   hosts: workers
@@ -24,3 +30,5 @@
     - role: swarm_join
       type: worker
       tags: swarm_join
+    - role: set_labels
+      tags: set_labels
