--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -1,3 +1,6 @@
 ansible_python_interpreter: /venv/bin/python3
 
 leader_ansible_host: "{{ hostvars[groups['leader'][0]].ansible_host }}"
+
+mount_folders:
+  registry: '/etc/registry'
