--- a/all.yml
+++ b/all.yml
@@ -14,6 +14,8 @@
       tags: set_labels
     - role: registry_init
       tags: registry_init
+    - role: build
+      tags: build
 
 - name: Managers
   hosts: managers
